Include cstdio before using sscanf and stderr https://bugs.webkit.org/show_bug.cgi?id=170098

Patch by Ting-Wei Lan <lantw44@gmail.com> on 2017-04-07
Reviewed by Michael Catanzaro.

* wtf/NumberOfCores.cpp:

Canonical link: https://commits.webkit.org/187535@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215107 268f45cc-cd09-0410-ab3c-d52691b4dbfc